--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "wrangler pages dev ./dist --compatibility-date=2022-12-20",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^5.0.0",
+    "@astrojs/mdx": "^0.14.0",
     "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.11",
+    "astro": "^1.7.2",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "wrangler": "^2.6.2"
   }
 }
