--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@astrojs/cloudflare": "^5.0.0",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@wordpress/html-entities": "^3.23.0",
     "astro": "^1.7.2",
+    "sanitize-html": "^2.8.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.8.0",
     "wrangler": "^2.6.2"
   }
 }
