--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "dependencies": {
     "@astrojs/cloudflare": "^5.0.0",
     "@astrojs/mdx": "^0.14.0",
+    "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@resvg/resvg-wasm": "^2.2.0",
     "astro": "^1.7.2",
+    "hash-wasm": "^4.9.0",
     "sanitize-html": "^2.8.1",
-    "tailwindcss": "^3.2.4"
+    "satori": "^0.0.44",
+    "satori-html": "^0.3.2",
+    "tailwindcss": "^3.2.4",
+    "yoga-wasm-web": "^0.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
     "@types/sanitize-html": "^2.8.0",
     "wrangler": "^2.6.2"
   }
