--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "satori": "^0.0.44",
     "satori-html": "^0.3.2",
     "tailwindcss": "^3.2.4",
+    "vite-plugin-top-level-await": "^1.2.2",
     "yoga-wasm-web": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/sanitize-html": "^2.8.0",
+    "vite-plugin-wasm": "^3.1.0",
     "wrangler": "^2.6.2"
   }
 }
