--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "node ./scripts/generate-og-images.js && astro build",
     "preview": "wrangler pages dev ./dist --compatibility-date=2022-12-20",
     "astro": "astro"
   },
@@ -15,9 +15,12 @@
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@resvg/resvg-js": "^2.2.0",
     "@resvg/resvg-wasm": "^2.2.0",
     "astro": "^1.7.2",
     "hash-wasm": "^4.9.0",
+    "html-to-text": "^9.0.3",
+    "node-fetch": "^3.3.0",
     "sanitize-html": "^2.8.1",
     "satori": "^0.0.44",
     "satori-html": "^0.3.2",
@@ -26,6 +29,7 @@
     "yoga-wasm-web": "^0.2.0"
   },
   "devDependencies": {
+    "@types/html-to-text": "^8.1.1",
     "@types/react": "^18.0.26",
     "@types/sanitize-html": "^2.8.0",
     "vite-plugin-wasm": "^3.1.0",
