--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@resvg/resvg-js": "^2.2.0",
-    "@resvg/resvg-wasm": "^2.2.0",
     "astro": "^1.7.2",
     "hash-wasm": "^4.9.0",
     "html-to-text": "^9.0.3",
@@ -25,16 +24,13 @@
     "sanitize-html": "^2.8.1",
     "satori": "^0.0.44",
     "satori-html": "^0.3.2",
-    "tailwindcss": "^3.2.4",
-    "vite-plugin-top-level-await": "^1.2.2",
-    "yoga-wasm-web": "^0.2.0"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
     "@types/html-to-text": "^8.1.1",
     "@types/react": "^18.0.26",
     "@types/sanitize-html": "^2.8.0",
-    "vite-plugin-wasm": "^3.1.0",
     "wrangler": "^2.6.2"
   }
 }
