--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "node ./scripts/generate-og-images.js && astro build",
-    "localBuild": "astro build",
+    "localBuild": "astro build && npm run preview",
     "preview": "wrangler pages dev ./dist --compatibility-date=2022-12-20",
     "astro": "astro"
   },
@@ -27,7 +27,6 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230115.0",
     "@types/html-to-text": "^9.0.0",
     "@types/react": "^18.0.27",
     "@types/sanitize-html": "^2.8.0",
