--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^6.1.0",
-    "@astrojs/mdx": "^0.15.1",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^3.0.0",
+    "@astrojs/cloudflare": "^6.1.1",
+    "@astrojs/mdx": "^0.15.2",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/tailwind": "^3.0.1",
     "@resvg/resvg-js": "^2.2.0",
-    "astro": "^2.0.2",
+    "astro": "^2.0.4",
     "hash-wasm": "^4.9.0",
     "html-to-text": "^9.0.3",
     "node-fetch": "^3.3.0",
@@ -27,9 +27,9 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230115.0",
     "@types/html-to-text": "^9.0.0",
-    "@types/react": "^18.0.27",
     "@types/sanitize-html": "^2.8.0",
-    "wrangler": "^2.8.1"
+    "wrangler": "^2.9.0"
   }
 }
